test/tests/compiler/7_compound_statements/valid/assign_to_self.plx



pub fn main(none) i32 {
    a: i32 = 3
    {
        a: i32 = a = 4
        return a
    }
}
