test/tests/compiler/7_compound_statements/invalid_semantics/double_define_after_scope.plx
pub fn main(none) i32 {
    a: i32 = 3
    {
        a = 5
    }
    a: i32 = 2
    return a
}
